# markdown-meta-parser

./: Cargo.toml  README.md
examples/: md-meta.rs  test.md
src/: items.rs  lib.rs  parser.rs
